[gd_scene load_steps=4 format=3 uid="uid://btfc8o5xfs14w"]

[ext_resource type="Script" uid="uid://bh6v4r3cb8nfa" path="res://addons/tube/inspector/messages_container.gd" id="1_cbqc8"]
[ext_resource type="Theme" uid="uid://bcibt73qths3g" path="res://addons/tube/inspector/theme.tres" id="1_kof4f"]
[ext_resource type="Texture2D" uid="uid://pxj3b3e28fg3" path="res://addons/tube/inspector/icons/clipboard_icon.tres" id="2_kj7ih"]

[node name="MessagesContainer" type="MarginContainer"]
custom_minimum_size = Vector2(0, 96)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -366.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kof4f")
script = ExtResource("1_cbqc8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "Messages"

[node name="MessagesAmountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(last 100)"

[node name="ClipboardButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
tooltip_text = "Copy all messages to clipboard"
theme_type_variation = &"ButtonFlat"
icon = ExtResource("2_kj7ih")
icon_alignment = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="ListContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClipboardButton" to="." method="_on_clipboard_button_pressed"]
